# Grovello

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  compose.platform.yaml  compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: CODEOWNERS  (+2 more)
services/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_foundation.py  0002_organization_access.py  0003_shared_business_truth.py  0004_asset_storage_foundation.py  0005_asset_upload_sessions.py  0006_asset_upload_scanning.py  0007_asset_finalization.py  0008_workspace_onboarding_import_foundation.py  0009_schema_metadata_parity.py  0010_import_mapping_validation.py  0011_import_apply_activation.py  (+1 more)
services/api/tests/: test_access.py  test_asset_catalog_api.py  test_asset_download_api.py  test_asset_foundation.py  test_asset_upload_api.py  test_asset_verification.py  test_business_truth.py  test_clamav_scanner.py  test_development_seed.py  test_import_apply_activation_foundation.py  test_import_change_set_api.py  test_import_mapping_validation_foundation.py  test_import_validation.py  test_knowledge_api.py  test_knowledge_ingestion_foundation.py  test_object_storage_config.py  test_s3_object_storage.py  test_schema_metadata_parity.py  test_system.py  test_temporal_asset_verification.py  test_workspace_onboarding_import_api.py  test_workspace_onboarding_import_foundation.py
services/workers/: Dockerfile  pyproject.toml
services/workers/tests/: test_asset_finalization.py  test_asset_upload_verification.py  test_connector_contract.py  test_growth_graph.py  test_import_apply.py  test_import_source_verification.py  test_import_validation.py
(+166 files in other folders)
