[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "grovello-workers"
version = "0.1.0"
description = "Temporal workflows, LangGraph agents, and connector contracts for Grovello"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
dependencies = [
  "langgraph==1.2.9",
  "pydantic==2.12.5",
  "pydantic-settings==2.14.2",
  "temporalio==1.23.0",
]

[project.optional-dependencies]
dev = ["pytest==9.1.1", "pytest-asyncio==1.3.0", "ruff==0.15.5"]

[project.scripts]
grovello-worker = "grovello_workers.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grovello_workers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM"]
